# stripe_quest

./: .dockerignore  .env_example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
config/: settings.py  urls.py
config/config/: settings.py  urls.py
config/payments/: constants.py  models.py  urls.py  views.py
config/templates/includes/: footer.html
nginx/: nginx.conf
payments/: admin.py  constants.py  context_processors.py  mixins.py  models.py  urls.py  views.py
payments/management/commands/: create_superuser_auto.py
payments/migrations/: 0001_initial.py  0002_discount_order_discount.py  0003_discount_stripe_coupon_id.py  0004_tax_item_discount_alter_discount_stripe_coupon_id_and_more.py  0005_remove_order_tax.py  0006_remove_item_discount.py  0007_remove_item_tax_item_taxes.py  0008_item_currency.py  0009_alter_orderitem_unique_together.py
payments/services/: stripe_builder.py  stripe_service.py
templates/includes/: footer.html  header.html  item_card.html
templates/payments/: cancel.html  order_detail.html  payment_detail.html  success.html
