[tool.poetry]
name = "stripy-quest"
version = "0.1.0"
description = ""
authors = ["Kirill Turochkin <kirill180104@mail.ru>"]
readme = "README.md"
packages = [{include = "stripy_quest"}]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=5.2.0,<5.3.0"
psycopg2-binary = ">=2.9.0,<2.10.0"
python-dotenv = "^1.2.2"
stripe = "^15.0.1"
django-bootstrap5 = ">=24.0.0,<25.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
